# CodeAnalyst

./: .gitignore  AGENTS.md  README.md  index.md  pyproject.toml
analyses/: README.md
analyses/2026-06-08-codebase-understanding-framework-import-graph/: architecture.md  diagrams.md  flows.md  import_graph.json  inventory.json  open-questions.md  overview.md  source.md  understanding_graph.json  vibe_audit.json
analyses/2026-06-10-code-analyst-framework-import-graph/: architecture.md  diagrams.md  flow_map.json  flows.md  import_graph.json  inventory.json  overview.md  script_check.json  source.md  understanding_graph.json  vibe_audit.json
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
docs/_generated/docdev/: audit.json
docs/changes/2026-06-15-native-install-release-public-repo/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
scripts/: check_install.sh  install_cli.sh  install_remote.sh  package_release.sh  sync_skill.sh  update_cli.sh
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: diagram-recipes.md  output-contract.md  quick-learning-framework.md
src/code_analyst/: __init__.py  cli.py  flow_map.py  pack.py  render_site.py  review_pack.py  script_check.py  verify_site.py  vibe_audit.py
src/codebase_understanding/: __init__.py  cli.py  import_graph.py  inventory.py  pack.py  render_site.py
tests/: test_cli.py  test_flow_map.py  test_import_graph.py  test_inventory.py  test_pack.py  test_render_site.py  test_review_pack.py  test_script_check.py  test_verify_site.py  test_vibe_audit.py
(+12 files in other folders)
