[project]
name = "codebase-understanding"
version = "0.1.0"
description = "Personal codebase learning framework and agent-friendly CLI."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cbu = "codebase_understanding.cli:main"
codebase-understanding = "codebase_understanding.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
