[project]
name = "code-analyst"
version = "0.6.2"
description = "CodeAnalyst personal code analysis assistant and agent-friendly CLI."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
code-analyst = "code_analyst.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
